fix deprecated constructor URL